--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+*{
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: #000000;
+    color: #ffffff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    padding:  60px;
+}
+
+h2.title-app{
+    color: #ffffff;
+    font-family: 'Press Start 2P', cursive;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+span.second-color {
+    color: #9933ff;
+    font-family: 'Press Start 2P', cursive;
+    text-align: center;
+}
+
+input {
+    color: #ffffff;
+    font-size: 1.2rem ;
+    width: 100%;
+    border-color: #9933ff;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-top: 5px;
+}
+
+input::placeholder{
+    color: #ffffff;
+    padding-left: 5px;
+}
+
+hr{
+    margin-top: 20px;
+}
+
+.h3-container {
+    width: 10%;
+}
+
+h3{
+    background-color: #9933ff;
+    border-radius: 20px;
+    color: #ffffff;
+    padding: 5px 15px 5px 15px;
+    text-align: center;
+    width: 100%;
+}
+
+
+.card-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+}
+
+.card {
+    align-content: center;
+    border: 1px solid #ffffff;
+    border-radius:  6px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    overflow: hidden;
+}
+
+.card p {
+    color: #ffffff;
+   /* font-family: 'Press Start 2P', cursive;*/
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px 25px 5px 25px;
+    text-align: center;
+}
+
+.card img {
+    max-height: 200PX;
+    width: 100%;
 }
